<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutTabata"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtSeries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/series"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toStartOf="@+id/txtTrabajo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Deprecated,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/txtTrabajo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/trabajo"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toStartOf="@+id/txtDescanso"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/txtSeries"
        app:layout_constraintTop_toTopOf="@+id/txtSeries"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/txtDescanso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/descanso"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/txtTrabajo"
        app:layout_constraintTop_toTopOf="@+id/txtTrabajo"
        tools:ignore="VisualLintTextFieldSize" />

    <ImageButton
        android:id="@+id/btnIniciar"
        android:layout_width="101dp"
        android:layout_height="112dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/iniciar"
        app:layout_constraintBottom_toTopOf="@+id/txtEstado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTrabajo"
        app:layout_constraintVertical_bias="0.50"
        app:srcCompat="@android:drawable/ic_media_play"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/estado_inicial"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnIniciar" />

    <TextView
        android:id="@+id/txtCuentaATras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/tiempo_inicial"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/txtSeriesResta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEstado"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/txtSeriesResta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seriesresta"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCuentaATras" />

</androidx.constraintlayout.widget.ConstraintLayout>